--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,3 +1,17 @@
 html {
     background-color:#fafafa
   }
+
+
+.main {
+  padding: 24px;
+  font-family: 'Libre Baskerville', serif;
+  background-color: #a64ac9;
+  height: 100%;
+  color: #ffffff;
+}
+
+  @font-face {
+    font-family: "Libre Baskerville";
+    src: url("../static/fonts/Libre_Baskerville/LibreBaskerville-Regular.ttf")   format("woff");
+  } 
