--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -13,7 +13,23 @@ html {
 
 @font-face {
   font-family: "Libre Baskerville";
+  src: url("../static/fonts/Libre_Baskerville/LibreBaskerville-Bold.ttf") format("woff");
+  font-style: normal;
+  font-weight: bold;
+}
+
+@font-face {
+  font-family: "Libre Baskerville";
+  src: url("../static/fonts/Libre_Baskerville/LibreBaskerville-Italic.ttf") format("woff");
+  font-style: italic;
+  font-weight: normal;
+}
+
+@font-face {
+  font-family: "Libre Baskerville";
   src: url("../static/fonts/Libre_Baskerville/LibreBaskerville-Regular.ttf") format("woff");
+  font-style: normal;
+  font-weight: normal;
 }
 
 h1, h2, h3, h4, h5, h6 {
